--- a/dev/flat_minimal.Rmd
+++ b/dev/flat_minimal.Rmd
@@ -220,7 +220,7 @@ eqm <- function(iso = TRUE
 
   return(
     data[compBlood == TRUE & (xm == 'NEG' | is.na(xm)),]
-    [order(-ptsEQM, mmHLA, -dialysis)]
+    [order(-urgent, -ptsEQM, mmHLA, -dialysis)]
     [1:n]
     [!is.na(ID),][, 
                   .(ID, 
